--- a/config-tool-web/index.html
+++ b/config-tool-web/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+.0
 <html style="scrollbar-gutter: stable both-edges;">
 
 <head>
@@ -8,6 +8,7 @@
     <title>HID Remapper Configuration</title>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
     <script src="code.js" type="module"></script>
+    <script src="easy-setup.js"></script>
     </script>
 </head>
 
@@ -15,7 +16,10 @@
 
     <div class="container d-flex flex-column" style="max-width: 720px; min-height: 100vh;">
 
-        <h1 class="mt-sm-5 mt-3">HID Remapper Configuration</h1>
+        <div class="d-flex justify-content-between align-items-center mt-sm-5 mt-3">
+            <h1 class="mb-0">HID Remapper Configuration</h1>
+            <a href="simple-ui/simple-mode.html" class="btn btn-success">🎯 Simpele Modus</a>
+        </div>
 
         <div class="row my-4">
             <div class="col">
@@ -35,7 +39,8 @@
         <div id="error" class="alert alert-danger d-none"></div>
 
         <div class="nav nav-tabs" id="nav-tab" role="tablist">
-            <button class="nav-link active" id="nav-mappings-tab" data-bs-toggle="tab" data-bs-target="#nav-mappings" type="button" role="tab">Mappings</button>
+            <button class="nav-link active" id="nav-easy-setup-tab" data-bs-toggle="tab" data-bs-target="#nav-easy-setup" type="button" role="tab">Easy Setup</button>
+            <button class="nav-link" id="nav-mappings-tab" data-bs-toggle="tab" data-bs-target="#nav-mappings" type="button" role="tab">Advanced Setup</button>
             <button class="nav-link" id="nav-settings-tab" data-bs-toggle="tab" data-bs-target="#nav-settings" type="button" role="tab">Settings</button>
             <button class="nav-link" id="nav-macros-tab" data-bs-toggle="tab" data-bs-target="#nav-macros" type="button" role="tab">Macros</button>
             <button class="nav-link" id="nav-expressions-tab" data-bs-toggle="tab" data-bs-target="#nav-expressions" type="button" role="tab">Expressions</button>
@@ -46,7 +51,45 @@
 
         <div class="tab-content flex-grow-1">
 
-            <div class="tab-pane active" id="nav-mappings" role="tabpanel" tabindex="0">
+            <div class="tab-pane active" id="nav-easy-setup" role="tabpanel" tabindex="0">
+                
+                <div class="row mt-4">
+                    <div class="col-12">
+                        <h4>Eenvoudige Button Mapping</h4>
+                        <p class="text-muted">Klik op een knop in de virtuele controller hieronder en druk vervolgens op de fysieke knop die je wilt mappen. Je hebt 5 seconden de tijd.</p>
+                    </div>
+                </div>
+
+                <div class="row mt-3">
+                    <div class="col-12 text-center">
+                        <div id="easy-setup-controller-container" class="d-inline-block">
+                            <!-- Controller wordt hier dynamisch geladen -->
+                        </div>
+                    </div>
+                </div>
+
+                <div id="easy-setup-status" class="alert alert-info mt-3 d-none">
+                    <strong>Wachten op input...</strong> Druk nu op de fysieke knop die je wilt mappen op <span id="easy-setup-target-button-name"></span>.
+                    <div class="progress mt-2" style="height: 4px;">
+                        <div id="easy-setup-progress" class="progress-bar" role="progressbar" style="width: 100%"></div>
+                    </div>
+                </div>
+
+                <div class="row mt-4">
+                    <div class="col-12">
+                        <h5>Quick Actions</h5>
+                        <div class="btn-group mt-2" role="group">
+                            <button id="easy-setup-clear-all" type="button" class="btn btn-outline-danger">Wis alle mappings</button>
+                            <button id="easy-setup-swap-sticks" type="button" class="btn btn-outline-primary">Wissel sticks</button>
+                            <button id="easy-setup-mirror-buttons" type="button" class="btn btn-outline-primary">Spiegel knoppen</button>
+                            <button id="easy-setup-reset-defaults" type="button" class="btn btn-outline-secondary">Reset naar standaard</button>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="tab-pane" id="nav-mappings" role="tabpanel" tabindex="0">
 
                 <div class="row pb-2 mt-3" style="overflow-x: auto;">
                     <div style="min-width: 720px; width: 100%;">
